err/cronredux.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cronredux'...
Listing './lib/python3.5/site-packages/cronredux/diag'...
Listing './lib/python3.5/site-packages/cronredux/diag/ui'...
Listing './lib/python3.5/site-packages/cronredux/diag/ui/static'...
Listing './lib/python3.5/site-packages/cronredux-dev_build.egg-info'...
Listing './lib/python3.5/site-packages/crontab'...
Listing './lib/python3.5/site-packages/crontab-0.22.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown2-2.3.5.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pendulum'...
Listing './lib/python3.5/site-packages/pendulum/_extensions'...
Listing './lib/python3.5/site-packages/pendulum/formatting'...
Listing './lib/python3.5/site-packages/pendulum/lang'...
Listing './lib/python3.5/site-packages/pendulum/mixins'...
Listing './lib/python3.5/site-packages/pendulum/tz'...
Listing './lib/python3.5/site-packages/pendulum-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shellish'...
Listing './lib/python3.5/site-packages/shellish/command'...
Listing './lib/python3.5/site-packages/shellish/command/contrib'...
Listing './lib/python3.5/site-packages/shellish/layout'...
Listing './lib/python3.5/site-packages/shellish/rendering'...
Listing './lib/python3.5/site-packages/shellish/tools'...
Listing './lib/python3.5/site-packages/shellish-5.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/tzlocal'...
Listing './lib/python3.5/site-packages/tzlocal/test_data'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc/conf.d'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var/db'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc/sysconfig'...
Listing './lib/python3.5/site-packages/tzlocal-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
